--- a/style.css
+++ b/style.css
@@ -1,5 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,400&display=swap");
-
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700&display=swap");
 
 body {
@@ -22,24 +20,24 @@ body {
   width: 35%;
   background-color: white;
   gap: 1rem;
-  padding: 3% 2%;
+  padding: 2% 2%;
   border-radius: 10px;
   box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
 }
 
 .heading-text h2 {
-  font-size: 2rem;
+  font-size: 1.75rem;
   color: rgb(29, 29, 29);
 }
 .heading-text p {
-  font-size: 1.8rem;
+  font-size: 1.5rem;
   color: rgb(90, 90, 90);
   font-weight: 400;
 }
 
 label {
   display: block;
-  font-size: 1.5rem;
+  font-size: 1.25rem;
   font-weight: bold;
   margin: 10px 0;
 }
@@ -64,11 +62,22 @@ input::placeholder {
 .reset-password-btn {
   border: none;
   outline: none;
-  width: 90%;
+  width: 96%;
   padding: 15px;
   font-size: 1.25rem;
   background-color: #1964ff;
   border-radius: 10px;
-
+  cursor: pointer;
   color: white;
+}
+
+.reset-password-btn:hover {
+  background-color: #1351ce;
+}
+
+.password-checks {
+  display: flex;
+  flex-wrap: wrap;
+  font-size: 1.15rem;
+  gap: 0.5rem;
 }
