--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
 }
 
 .container {
-  height: 100vh;
+  height: auto;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -20,7 +20,8 @@ body {
   width: 35%;
   background-color: white;
   gap: 1rem;
-  padding: 2% 2%;
+  padding: 2%;
+  margin: 2%;
   border-radius: 10px;
   box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
 }
@@ -78,11 +79,14 @@ input::placeholder {
 .password-checks {
   display: flex;
   flex-wrap: wrap;
-  font-size: 1.15rem;
+  font-size: 0.9rem;
   gap: 0.5rem;
 }
 
 @media only screen and (max-width: 900px) {
+  .container {
+    height: 100vh;
+  }
   .reset-password {
     width: 70%;
     padding: 3%;
@@ -90,6 +94,9 @@ input::placeholder {
 }
 
 @media only screen and (max-width: 640px) {
+  .container {
+    height: 100vh;
+  }
   .reset-password {
     width: 85%;
     gap: 0.7rem;
