--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: #e1e1e1;
+  background-image: linear-gradient(0deg, #ffdee9 0%, #b5fffc 100%);
 }
 
 .reset-password {
@@ -19,7 +19,7 @@ body {
   flex-direction: column;
   width: 35%;
   background-color: white;
-  gap: 1rem;
+  gap: 0.5rem;
   padding: 2%;
   margin: 2%;
   border-radius: 10px;
@@ -63,13 +63,14 @@ input::placeholder {
 .reset-password-btn {
   border: none;
   outline: none;
-  width: 96%;
+  width: 97%;
   padding: 15px;
   font-size: 1.25rem;
   background-color: #1964ff;
   border-radius: 10px;
   cursor: pointer;
   color: white;
+  margin-bottom: 10px;
 }
 
 .reset-password-btn:hover {
@@ -81,6 +82,7 @@ input::placeholder {
   flex-wrap: wrap;
   font-size: 0.9rem;
   gap: 0.5rem;
+  margin-left: 5px;
 }
 
 @media only screen and (max-width: 900px) {
@@ -98,7 +100,7 @@ input::placeholder {
     height: 100vh;
   }
   .reset-password {
-    width: 85%;
+    width: 90%;
     gap: 0.7rem;
     padding: 3%;
   }
@@ -108,5 +110,9 @@ input::placeholder {
   }
   .heading-text p {
     font-size: 1.25rem;
+  }
+
+  label {
+    font-size: 1rem;
   }
 }
